--- a/src/main/res/xml/he_autotext.xml
+++ b/src/main/res/xml/he_autotext.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
 **
-** Copyright 2012, AnySoftKeyboard
+** Copyright 2008, The Android Open Source Project
 **
 ** Licensed under the Apache License, Version 2.0 (the "License")
 ** you may not use this file except in compliance with the License.
@@ -17,9 +17,14 @@
 */
 -->
 <words>
-    <!-- this dictionary is used for common typing mistakes -->
-    <!-- the attribute 'src' will be replace by the node's value: -->
-    <!-- rght will be converted to right -->
-    <word src="rght">right</word>
-    <word src="riht">right</word>
+    <word src="אסטטי">אסתטי</word>
+    <word src="הזהרה">אזהרה</word>
+    <word src="כול">כל</word>
+    <word src="הייתה">היית</word>
+    <word src="לאמור">לומר</word>
+    <word src="אותכם">אתכם</word>
+    <word src="אמריקאי">אמריקני</word>
+    <word src="מרוקאי">מרוקני</word>
+    <word src="יושן">ישן</word>
+    <word src="יושנים">ישנים</word>
 </words>
