--- a/src/main/res/xml/wghqwerty.xml
+++ b/src/main/res/xml/wghqwerty.xml
@@ -13,41 +13,62 @@
          "android:isRepeatable" : true/false (default is false) whether this key repeats printing on long press (like the backspace). Setting this to true will disable the long-press (android:popupCharacters) functionality
          "android:keyWidth" : specify the width of this key
          -->
-        <Key android:codes="113" android:popupCharacters="1" android:keyEdgeFlags="left"/>
-        <Key android:codes="119" android:popupCharacters="2"/>
-        <Key android:codes="101" android:popupCharacters="3èéêëęē€"/>
-        <Key android:codes="114" android:popupCharacters="4" />
-        <Key android:codes="116" android:popupCharacters="5"/>
-        <Key android:codes="121" android:popupCharacters="6ýÿ" />
-        <Key android:codes="117" android:popupCharacters="7ùúûüŭűū" />
-        <Key android:codes="105" android:popupCharacters="8ìíîïłī" />
-        <Key android:codes="111" android:popupCharacters="9òóôõöøőœō" />
-        <Key android:codes="112" android:popupCharacters="0" android:keyEdgeFlags="right"/>
+
+        <!-- -1 is shift, 
+        -9 is a .com thing, 
+        -10 is an emoji thing, 
+        -11 is control, 
+        -6 is maybe alt (but it doesn't seem to work), 
+        -22 is up, -23 down, 
+        -20 left, -21 right, 
+        -5 is backspace-->
+        <!-- other codes are unicode values -->
+
+        <Key android:codes="113" android:keyLabel="q" android:popupCharacters="1" android:keyEdgeFlags="left"/>
+        <Key android:codes="119" android:keyLabel="w" android:popupCharacters="2"/>
+        <Key android:codes="101" android:keyLabel="e" android:popupCharacters="3"/>
+        <Key android:codes="114" android:keyLabel="r" android:popupCharacters="4" />
+        <Key android:codes="116" android:keyLabel="t" android:popupCharacters="5"/>
+        <Key android:codes="121" android:keyLabel="y" android:popupCharacters="6" />
+        <Key android:codes="117" android:keyLabel="u" android:popupCharacters="7" />
+        <Key android:codes="105" android:keyLabel="i" android:popupCharacters="8" />
+        <Key android:codes="111" android:keyLabel="o" android:popupCharacters="9" />
+        <Key android:codes="112" android:keyLabel="p" android:popupCharacters="0" android:keyEdgeFlags="right"/>
     </Row>
      
     <Row>
-        <Key android:horizontalGap="5%p" android:codes="97" android:keyLabel="a" android:popupCharacters="àáâãäåæą" android:keyEdgeFlags="left"/>
-        <Key android:codes="115" android:keyLabel="s" android:popupCharacters="§ßśŝš"/>
-        <Key android:codes="100" android:keyLabel="d" android:popupCharacters="đ"/>
-        <Key android:codes="102" android:keyLabel="f"/>
-        <Key android:codes="103" android:keyLabel="g" android:popupCharacters="ĝ"/>
-        <Key android:codes="104" android:keyLabel="h" android:popupCharacters="ĥ"/>
-        <Key android:codes="106" android:keyLabel="j" android:popupCharacters="ĵ"/>
-        <Key android:codes="107" android:keyLabel="k"/>
-        <Key android:codes="108" android:keyLabel="l" android:keyEdgeFlags="right"/>
+        <Key android:horizontalGap="5%p" android:codes="97" android:keyLabel="a" android:popupCharacters="\@" android:keyEdgeFlags="left"/>
+        <Key android:codes="115" android:keyLabel="s" android:popupCharacters="$"/>
+        <Key android:codes="100" android:keyLabel="d" android:popupCharacters="#"/>
+        <Key android:codes="102" android:keyLabel="f" android:popupCharacters="%"/>
+        <Key android:codes="103" android:keyLabel="g" android:popupCharacters="^~"/>
+        <Key android:codes="104" android:keyLabel="h" android:popupCharacters="({[\u003C«｢"/>
+        <Key android:codes="106" android:keyLabel="j" android:popupCharacters=")}]>»｣"/>
+        <Key android:codes="107" android:keyLabel="k" android:popupCharacters="/\\"/>
+        <Key android:codes="108" android:keyLabel="l" android:popupCharacters="|" android:keyEdgeFlags="right"/>
     </Row>
     
     <Row>
-        <Key android:codes="-1" android:keyWidth="15%p"
-                android:isModifier="true" android:isSticky="true" android:keyEdgeFlags="left"/>
-        <Key android:codes="122" android:keyLabel="z" android:popupCharacters="żžź"/>
-        <Key android:codes="120" android:keyLabel="x"/>
-        <Key android:codes="99" android:keyLabel="c" android:popupCharacters="çćĉč"/>
-        <Key android:codes="118" android:keyLabel="v"/>
-        <Key android:codes="98" android:keyLabel="b"/>
+        <Key android:codes="-1" android:keyWidth="15%p" android:isModifier="true" android:isSticky="true" android:keyEdgeFlags="left"/>
+        <Key android:codes="122" android:keyLabel="z" android:popupCharacters="\u0022'`"/>
+        <Key android:codes="120" android:keyLabel="x" android:popupCharacters="*+"/>
+        <Key android:codes="99" android:keyLabel="c" android:popupCharacters="\u0026"/>
+        <Key android:codes="118" android:keyLabel="v" android:popupCharacters="="/>
+        <Key android:codes="98" android:keyLabel="b" android:popupCharacters=";:"/>
         <Key android:codes="110" android:keyLabel="n" android:popupCharacters="ñ"/>
-        <Key android:codes="109" android:keyLabel="m"/>
+        <Key android:codes="109" android:keyLabel="m" android:popupCharacters="-_"/>
         <Key android:keyWidth="15%p" android:codes="-5" android:keyEdgeFlags="right" android:isRepeatable="true"/>
+    </Row>
+    <Row android:rowEdgeFlags="bottom">
+        <Key android:codes="-11" android:keyLabel="Ctl" android:keyWidth="15%p" android:isModifier="true" android:isSticky="true" android:keyEdgeFlags="left"/>
+        <!--
+        <Key android:codes="-6" android:keyLabel="Alt" android:isModifier="true" android:isSticky="true"/>
+        -->
+        <Key android:codes="27" android:keyLabel="Esc" android:keyWidth="15%p"/>
+        <Key android:codes="9" android:keyLabel="⇥" android:keyWidth="10%p"/>
+        <Key android:codes="32" android:keyWidth="35%p" />
+        <Key android:codes="46" android:keyLabel="." android:popupCharacters=",!?¿" android:keyWidth="10%p"/>
+        <Key android:keyWidth="15%p" android:codes="10" android:keyEdgeFlags="right" android:isRepeatable="true"/>
     </Row>
 </Keyboard>
     
